Colocando overflow hidden para que se vea bien la página en los móviles

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ body {
     background-repeat: no-repeat;
     background-size: 100% 100%;
     /* quitar scroll vertical */
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 .home-main {
