Colocando overflow: hidden para que la pantalla quede quieta

--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ body {
     background-attachment: fixed;
     /* position: static; */
     /* quitar scroll vertical */
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 .home-main {
