--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@
 html,
 body {
     height: 100%;
+    width: 100%;
     margin: 0;
     font-family: 'Roboto mono', monospace;
     background-image: url('../assets/img/guitar1.jpg');
@@ -12,6 +13,7 @@ body {
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
+    position: fixed;
 }
 
 .home-main {
