--- a/css/main.css
+++ b/css/main.css
@@ -123,7 +123,8 @@ body {
     align-self: center;
 }
 
-.desarrollador img {
+.desarrollador a img {
+    padding-right: 20px;
     width: 50px;
 }
 
