--- a/css/estilos.css
+++ b/css/estilos.css
@@ -624,8 +624,8 @@ body {
     border: 3px solid gray;
     padding: 10px;
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 1fr;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr 1fr;
     overflow: scroll;
     overflow-y: unset;
 }
@@ -645,7 +645,7 @@ body {
 .contenido .accesorios .pc .accesorio-pc h3 {
     line-height: 40px;
     height: 40px;
-    font-size: 1.5em;
+    font-size: 1em;
     margin: 0;
 }
 
