--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ body {
 .home-main {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: .5fr 1fr .4fr;
+    /* grid-template-rows: .5fr 1fr .4fr; */
     gap: 10px;
     height: 100%;
     min-height: 100vh;
@@ -136,6 +136,7 @@ body {
     body {
         height: 100vh;
     }
+    .home-main {}
     .home-main .home-main-text {
         margin: 0;
     }
