--- a/css/main.css
+++ b/css/main.css
@@ -169,6 +169,7 @@ body {
 @media screen and (max-width: 1024px) {
     .home-main {
         grid-template-columns: .3fr 1fr .3fr;
+        grid-template-rows: 200px .5fr .3;
     }
     .home-main .img {
         grid-column: 2;
@@ -190,7 +191,7 @@ body {
     }
     .home-main .home-main-text {
         font-size: 1.5em;
-        margin-top: 50px;
+        align-self: center;
     }
     .home-main .enlaces .home-main-button {
         width: 160px;
