--- a/css/main.css
+++ b/css/main.css
@@ -158,7 +158,7 @@ body {
         height: 150px;
     } */
     .home-main .home-main-text p {
-        font-size: 1.1em;
+        font-size: 1.5em;
         margin: 0 auto;
     }
     .desarrollador a img {
@@ -182,7 +182,7 @@ body {
     }
     .home-main .home-main-text p {
         width: 90%;
-        font-size: 2em;
+        font-size: 3em;
         margin: 0 auto;
     }
     .home-main .img img {
@@ -191,7 +191,8 @@ body {
     }
     .home-main .home-main-text {
         font-size: 1.5em;
-        align-self: center;
+        align-self: baseline;
+        margin-top: 30px;
     }
     .home-main .enlaces .home-main-button {
         width: 160px;
