--- a/css/main.css
+++ b/css/main.css
@@ -153,12 +153,8 @@ body {
         grid-column: 2;
         grid-row: 3;
     }
-    /* .home-main .img img {
-        width: 150px;
-        height: 150px;
-    } */
     .home-main .home-main-text p {
-        font-size: 1.5em;
+        /* font-size: 1.5em; */
         margin: 0 auto;
     }
     .desarrollador a img {
@@ -182,7 +178,7 @@ body {
     }
     .home-main .home-main-text p {
         width: 90%;
-        font-size: 3em;
+        /* font-size: 3em; */
         margin: 0 auto;
     }
     .home-main .img img {
