--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,8 @@ body {
     width: 100%;
     margin: 0;
     font-family: 'Roboto mono', monospace;
-    background-image: url('../assets/img/guitar1.jpg');
+    /* background-image: url('../assets/img/guitar1.jpg'); */
+    background-color: rgb(185, 178, 178);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -124,81 +125,4 @@ body {
 .desarrollador a img {
     padding-right: 20px;
     width: 50px;
-}
-
-
-/* vista para tablets y smartphones */
-
-
-/* 
-@media screen and (max-width: 425px) {
-    body {
-        height: 100vh;
-    }
-    .home-main {}
-    .home-main .home-main-text {
-        margin: 0;
-    }
-    .home-main .img img {
-        width: 100%;
-    }
-} */
-
-
-/* 
-@media screen and (max-width: 768px) {
-    .home-main img {
-        grid-column: 2;
-        grid-row: 3;
-    }
-    .home-main .home-main-text p {
-        font-size: 1.5em;
-        margin: 0 auto;
-    }
-    .home-main .enlaces .home-main-button {
-        width: 500px;
-    }
-    .desarrollador a img {
-        min-width: 40px;
-    }
-} */
-
-@media screen and (max-width: 1024px) {
-    .home-main {
-        grid-template-columns: .3fr 1fr .3fr;
-        grid-template-rows: 200px .5fr .3;
-    }
-    .home-main .img {
-        grid-column: 2;
-    }
-    .home-main .img img {
-        width: 40%;
-        height: 50px;
-        margin: 0 auto;
-        min-width: 45%;
-        grid-row: 3;
-        grid-column: 2;
-    }
-    .home-main .home-main-text {
-        font-size: 1.5em;
-        align-self: baseline;
-        margin-top: 30px;
-    }
-    .home-main .home-main-text p {
-        width: 70%;
-        font-size: 2.2em;
-        margin: 0 auto;
-    }
-    .home-main .enlaces .home-main-button {
-        width: 260px;
-        height: 50px;
-        /* margin: 20px 0;
-        padding: 20px 0; */
-    }
-    .home-main .enlaces .home-main-button a {
-        font-size: 1.8em;
-    }
-    .desarrollador a img {
-        width: 60%;
-    }
 }
