--- a/css/estilos.css
+++ b/css/estilos.css
@@ -243,41 +243,39 @@ h2:hover {
     justify-content: center;
     position: relative;
     width: 100%;
-    padding: 50px 0;
     margin: 0 auto;
     border: 2px solid #419CCA;
     object-fit: cover;
 }
 
 .contenido .presentacion .preacce {
-    height: 350px;
     text-align: center;
-    /* padding: 50px 100px; */
-    background-size: cover;
-    background-repeat: no-repeat;
 }
 
 .contenido .presentacion .p1 {
+    width: 100%;
+    height: 400px;
     background-image: url('../assets/img/presentacion/p1.gif');
-    background-size: 90%;
-    background-position: center;
-    /* height: i; */
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 }
 
 .contenido .presentacion .p2 {
+    width: 100%;
+    height: 400px;
     display: none;
-    background-image: url('../assets/img/presentacion/p2.png');
-    background-size: 100%;
-    background-position: center;
-    /* width: 200px; */
+    background-image: url('../assets/img/presentacion/p1.gif');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 }
 
 .contenido .presentacion .p3 {
+    width: 100%;
+    height: 400px;
     display: none;
-    background-image: url('../assets/img/ArticulosChina/Microfono/1.jpg');
-    background-size: 90%;
-    background-position: center;
-    /* width: 200px; */
+    background-image: url('../assets/img/presentacion/p1.gif');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 }
 
 
